--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,4 +10,4 @@ spring:
   datasource:
     url: jdbc:mysql://mysql-346fa04d-rhdudqls73-391f.k.aivencloud.com:12507/defaultdb
     username: avnadmin
-    password: AVNS_qTvkdsLx4SualZU5wuo
+    password: ${DB_PASSWORD}
